<?xml version="1.0" encoding="utf-8"?>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_fragmen_color">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:contentScrim="?attr/colorPrimary">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/photo_user"
                        app:layout_collapseMode="parallax"/>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="Имя пользователя"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:padding="16dp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/background_card_color"
                        android:padding="16dp"
                        app:cardBackgroundColor="@color/background_card_color"
                        app:cardCornerRadius="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@color/background_card_color">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="160dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:padding="8dp"
                                    android:text="@string/rating_text"
                                    android:textSize="16sp" />

                                <RatingBar
                                    android:id="@+id/ratingBar"
                                    android:theme="@style/MyRatingBar"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:max="5"
                                    android:isIndicator="true"
                                    android:numStars="5"
                                    android:stepSize="0.5" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:padding="8dp"
                                    android:text="@string/money_text"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/moneyText"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:textColor="@color/text_color_red"
                                    android:padding="8dp"
                                    android:textStyle="bold"
                                    android:text="0"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:padding="8dp"
                                    android:text="@string/about_me_text"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/aboutMeText"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:padding="8dp"
                                    android:textStyle="bold"

                                    android:text="Расскажите о себе"
                                    android:textSize="16sp" />
                            </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/birthday_text"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/birthdayText"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:textStyle="bold"

                                android:padding="10dp"
                                android:text="Укажите дату рождения"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="8dp"
                                android:text="@string/city_text"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/cityText"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:padding="8dp"
                                android:textStyle="bold"

                                android:text="Из какого вы города?"
                                android:textSize="16sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="8dp"
                                android:text="@string/status_text"
                                android:textSize="16sp" />
                            <TextView
                                android:id="@+id/statusText"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:padding="8dp"
                                android:textStyle="bold"

                                android:text="Какой у вас социальный статус?"
                                android:textSize="16sp" />

                        </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:padding="8dp"
                                    android:text="@string/email_text"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/emailText"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:padding="8dp"
                                    android:textStyle="bold"
                                    android:text="Укажите почту"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:padding="8dp"
                                    android:text="@string/phone_number_text"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/phoneNumberText"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:padding="8dp"
                                    android:textStyle="bold"
                                    android:text="Укажите номер телефона"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:padding="8dp"
                                    android:text="@string/social_network_text"
                                    android:textSize="16sp" />
                                <TextView
                                    android:id="@+id/socialNetworkText"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:padding="8dp"
                                    android:textStyle="bold"
                                    android:text="Оставьте ссылку на социальные сети, чтобы мы могли с вами связаться"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_create_24"
                app:layout_anchor="@id/collapsing_toolbar"
                app:layout_anchorGravity="bottom|end"
                android:backgroundTint="@color/turquoise_buy"
                app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
